<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="3dp"
    >

    <TextView
        android:id="@+id/ItemDetailsPage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/ItemDetailsPage"
        android:textAlignment="center"
        android:background="@color/lightGreen"
        android:textColor="@color/White"
        android:paddingTop="15dp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/NameDetailsPage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#F000"
        android:paddingTop="10dp"
        android:textSize="20dp"
        android:scrollbars="vertical"
        android:layout_below="@+id/ItemDetailsPage"
        android:fadingEdge="vertical"
        android:textAlignment="center"
        android:scaleType="fitCenter"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        />

    <ImageView
        android:id="@+id/ImageDetailsPage"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_below="@+id/NameDetailsPage"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayoutId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ImageDetailsPage"
        android:weightSum="5">

        <TextView
            android:id="@+id/EnterQty"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:textColor="#F000"
            android:paddingTop="15dp"
            android:textStyle="bold"
            android:text="@string/Enter_Qty"
            android:textSize="15dp"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:fontFamily="sans-serif-light"
            android:layout_below="@+id/ImageDetailsPage"
            android:scaleType="center"
            android:layout_alignTop="@+id/EditQtyDetailsPage"
            android:layout_toLeftOf="@+id/EditQtyDetailsPage"
            android:layout_toStartOf="@+id/EditQtyDetailsPage" />

        <EditText
            android:id="@+id/EditQtyDetailsPage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:textColor="#F000"
            android:hint="@string/NumberOnly"
            android:textSize="15dp"
            android:inputType="number"
            android:textAlignment="center"
            android:layout_below="@+id/ImageDetailsPage"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:scaleType="center"
            android:layout_alignTop="@+id/PriceDetailsPage"
            android:layout_toLeftOf="@+id/PriceDetailsPage"
            android:layout_toStartOf="@+id/PriceDetailsPage" />

        <TextView
            android:id="@+id/PriceDetailsPage"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:textColor="#F000"
            android:textSize="15dp"
            android:paddingTop="15dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:scaleType="center"
            android:layout_below="@+id/ImageDetailsPage"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/DescriptionDetailsPage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textColor="#F000"
        android:paddingTop="30dp"
        android:textSize="15dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        android:scaleType="center"
        android:layout_below="@+id/linearLayoutId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/SaveAndReturnToMainPage"
        android:layout_margin="8dp"
        android:textColor="@color/White"
        android:textSize="18dp"
        android:textStyle="bold"
        android:background="@color/lightGreen"
        android:textAlignment="center"
        android:fontFamily="sans-serif-light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    </RelativeLayout>
</ScrollView>